# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  setup.cfg
.github/workflows/: ci.yml
pre_commit_hooks/: copy_files.py
testing/: util.py
testing/resources/: new_readme.md  old_readme.md
tests/: copy_files_test.py
