[metadata]
name = pre_commit_hooks
version = 1.0.0
description = Hooks for pre-commit.
url = https://github.com/meero-com/pre-commit-hooks
author = Meero
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    copy-files = pre_commit_hooks.copy_files:main
